# townsquare

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  SPEC.md  docker-compose.yml  example.env  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml
docker/: Dockerfile  compose.yaml  entrypoint.sh
docs/: GOOGLE_OAUTH_SETUP.md  OPERATIONS.md  SELF_HOSTING.md  TROUBLESHOOTING.md
examples/: README.md
scripts/: backup.sh
src/townsquare/: __init__.py  cli.py  settings.py
src/townsquare/agent/: __init__.py  runner.py
src/townsquare/auth/: __init__.py  crypto.py  google_sso.py
src/townsquare/connectors/: __init__.py  base.py  calendar.py  drive.py  gmail.py  linear.py  registry.py
src/townsquare/db/: __init__.py  models.py
src/townsquare/federation/: __init__.py  router.py  selector.py
src/townsquare/shared/: __init__.py
src/townsquare/web/: __init__.py  app.py
src/townsquare/web/routes/: connections.py  connections_oauth.py
tests/: conftest.py  test_admin_cli.py  test_connectors_linear.py  test_federation.py  test_smoke.py  test_upsert_connection.py  test_users.py  test_wiki_tools.py
